dfir_rs/tests/compile-fail-stable/surface_negative_loop.stderr
error: Negative edge creates a negative cycle which must be broken with a `defer_tick()` operator.
 --> tests/compile-fail-stable/surface_negative_loop.rs:7:18
  |
7 |         diff -> [neg]diff;
  |                  ^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_negative_loop.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
